--- a/index.html
+++ b/index.html
@@ -5,25 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CA Balkishan Yadav | Resume</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(to bottom, #000000, #1a1a1a);
+      color: #ffffff;
+    }
+    .card {
+      background-color: rgba(255, 255, 255, 0.05);
+      border: 1px solid #333;
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    }
+    .section-title {
+      border-bottom: 2px solid #444;
+      padding-bottom: 0.25rem;
+      margin-bottom: 1.5rem;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <div class="max-w-4xl mx-auto px-4 py-8">
-    <header class="text-center mb-8">
+<body class="font-sans">
+  <div class="max-w-4xl mx-auto px-6 py-10">
+    <!-- Header Section -->
+    <header class="text-center mb-10">
+      <img src="./ICAI.jpeg" alt="Profile Photo" class="mx-auto rounded-full shadow-lg mb-6 w-36 h-36 object-cover border-4 border-gray-600">
       <h1 class="text-4xl font-bold">CA Balkishan Yadav</h1>
-      <p class="text-lg">Chartered Accountant | Financial Reporting | Fund Services | IFRS</p>
-      <p class="text-sm mt-2">📧 ca.balkishanyadav@gmail.com | 📞 +91 9182103194</p>
+      <p class="text-lg mt-1 text-gray-300">Chartered Accountant | Financial Reporting | Fund Services | IFRS</p>
+      <p class="text-sm text-gray-400 mt-1">📧 ca.balkishanyadav@gmail.com | 📞 +91 9182103194</p>
+      <a href="resume.pdf" download class="mt-4 inline-block bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">Download Resume (PDF)</a>
     </header>
 
-    <section class="mb-6">
-      <h2 class="text-2xl font-semibold border-b pb-1 mb-2">Professional Summary</h2>
+    <section class="card mb-10">
+      <h2 class="text-2xl font-semibold section-title">Professional Summary</h2>
       <p>
         Chartered Accountant with 8+ years of experience in financial reporting, audit, and compliance. Specialized in IFRS, SORP, and LUX GAAP reporting. Adept in stakeholder management, audit coordination, and driving financial process improvements across large financial institutions.
       </p>
     </section>
 
-    <section class="mb-6">
-      <h2 class="text-2xl font-semibold border-b pb-1 mb-2">Core Competencies</h2>
-      <ul class="list-disc ml-6">
+    <section class="card mb-10">
+      <h2 class="text-2xl font-semibold section-title">Core Competencies</h2>
+      <ul class="list-disc list-inside text-gray-300 space-y-1">
         <li>Financial Reporting & Analysis (IFRS, SORP, LUX GAAP)</li>
         <li>Board Reporting, Audit Coordination</li>
         <li>Regulatory Reporting (AIFMD, UCITS, Form PF)</li>
@@ -32,41 +53,42 @@
       </ul>
     </section>
 
-    <section class="mb-6">
-      <h2 class="text-2xl font-semibold border-b pb-1 mb-2">Professional Experience</h2>
-      <div class="mb-4">
+    <section class="card mb-10">
+      <h2 class="text-2xl font-semibold section-title">Professional Experience</h2>
+
+      <div class="mb-6">
         <h3 class="text-xl font-bold">Associate – Fund Services</h3>
-        <p class="text-sm italic">J.P. Morgan Chase & Co. | May 2022 – Present</p>
-        <ul class="list-disc ml-6 mt-2">
+        <p class="text-sm italic text-gray-400">J.P. Morgan Chase & Co. | May 2022 – Present</p>
+        <ul class="list-disc list-inside text-gray-300 mt-2">
           <li>Prepared financial statements under IFRS & LUX GAAP for 10+ fund structures</li>
           <li>Created board packs, handled client audits, and implemented SMART & Unity migrations</li>
           <li>Awarded Star Performer and Client Champion</li>
         </ul>
       </div>
 
-      <div class="mb-4">
+      <div class="mb-6">
         <h3 class="text-xl font-bold">Risk Analyst – Market Risk</h3>
-        <p class="text-sm italic">State Street HCL | Dec 2020 – Apr 2022</p>
-        <ul class="list-disc ml-6 mt-2">
+        <p class="text-sm italic text-gray-400">State Street HCL | Dec 2020 – Apr 2022</p>
+        <ul class="list-disc list-inside text-gray-300 mt-2">
           <li>Calculated VaR and conducted stress testing for hedge fund portfolios</li>
           <li>Delivered insights to risk managers and ensured regulatory compliance</li>
         </ul>
       </div>
 
-      <div class="mb-4">
+      <div class="mb-6">
         <h3 class="text-xl font-bold">Senior Audit Assistant</h3>
-        <p class="text-sm italic">M.S. Bansal & Co. | Mar 2018 – May 2019</p>
+        <p class="text-sm italic text-gray-400">M.S. Bansal & Co. | Mar 2018 – May 2019</p>
       </div>
 
-      <div class="mb-4">
+      <div class="mb-6">
         <h3 class="text-xl font-bold">Article Assistant</h3>
-        <p class="text-sm italic">Rajesh Vyas & Associates | Mar 2015 – Mar 2018</p>
+        <p class="text-sm italic text-gray-400">Rajesh Vyas & Associates | Mar 2015 – Mar 2018</p>
       </div>
     </section>
 
-    <section class="mb-6">
-      <h2 class="text-2xl font-semibold border-b pb-1 mb-2">Education & Certifications</h2>
-      <ul class="list-disc ml-6">
+    <section class="card mb-10">
+      <h2 class="text-2xl font-semibold section-title">Education & Certifications</h2>
+      <ul class="list-disc list-inside text-gray-300">
         <li>Chartered Accountant – ICAI – Jan 2020</li>
         <li>B.Com – Osmania University – Apr 2015</li>
         <li>Alteryx – Data Research & Transformation</li>
@@ -74,9 +96,16 @@
       </ul>
     </section>
 
-    <footer class="text-center text-sm text-gray-600 mt-10">
-      Built by Balkishan Yadav | Hosted for free
+    <section class="text-center mt-10">
+      <h2 class="text-xl font-semibold mb-2 text-white">Get in Touch</h2>
+      <p class="mb-4 text-gray-400">Have a project, opportunity, or just want to say hi? Feel free to reach out.</p>
+      <a href="mailto:ca.balkishanyadav@gmail.com" class="inline-block bg-green-500 text-white px-5 py-2 rounded hover:bg-green-600">Email Me</a>
+    </section>
+
+    <footer class="text-center text-sm text-gray-500 mt-10">
+      &copy; 2025 Balkishan Yadav. Built with 💼 & Tailwind CSS.
     </footer>
   </div>
 </body>
 </html>
+
