--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1 class="text-4xl font-bold">CA Balkishan Yadav</h1>
       <p class="text-lg mt-1 text-gray-300">Chartered Accountant | Financial Reporting | Fund Services | IFRS</p>
       <p class="text-sm text-gray-400 mt-1">📧 ca.balkishanyadav@gmail.com | 📞 +91 9182103194</p>
-      <a href="resume.pdf" download class="mt-4 inline-block bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">Download Resume (PDF)</a>
+      <a href="bkyresume.pdf" download class="mt-4 inline-block bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">Download Resume (PDF)</a>
     </header>
 
     <section class="card mb-10">
