--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <div class="max-w-4xl mx-auto px-6 py-10">
     <!-- Header Section -->
     <header class="text-center mb-10">
-      <img src="./ICAI.jpeg" alt="Profile Photo" class="mx-auto rounded-full shadow-lg mb-7 w-37 h-37 object-cover border-4 border-gray-600">
+      <img src="./ICAI.jpeg" alt="Profile Photo" class="mx-auto rounded-full shadow-lg mb-6 w-36 h-36 object-cover border-4 border-gray-600">
       <h1 class="text-4xl font-bold">CA Balkishan Yadav</h1>
       <p class="text-lg mt-1 text-gray-300">Chartered Accountant | Financial Reporting | Fund Services | IFRS</p>
       <p class="text-sm text-gray-400 mt-1">📧 ca.balkishanyadav@gmail.com | 📞 +91 9182103194</p>
-      <a href="bkyresume.pdf" download class="mt-4 inline-block bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">
+      <a href="./bky.pdf" download class="mt-4 inline-block bg-white text-black px-4 py-2 rounded shadow hover:bg-gray-200">
   Download Resume (PDF)
 </a>
     </header>
